Get base URL from Spring environment, if available there.